plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id "name.remal.sonarlint" version "7.0.1"
    id "com.github.jakemarsden.git-hooks" version "0.0.2"
    id 'org.liquibase.gradle' version '2.2.2'
    id "co.uzzu.dotenv.gradle" version "4.0.0"
    id "jacoco"
    id 'org.barfuin.gradle.jacocolog' version '3.1.0'
}

group = 'com.waltsoft'
version = '0.0.1'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    implementation 'org.liquibase:liquibase-core'
    implementation 'org.postgresql:postgresql'

    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.4.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.apache.commons:commons-text:1.15.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'
    implementation 'org.springframework:spring-context-support:7.0.7'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
    testImplementation 'org.testcontainers:postgresql:1.21.4'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

test {
    useJUnitPlatform()
    testLogging {
        exceptionFormat = 'full'
        events "passed", "skipped", "failed"
        showStandardStreams = (System.getenv('DEBUG') != null)
    }

    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}

jacocoTestCoverageVerification {

    violationRules {
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'CLASS'
                minimum = 0.90
            }
        }

        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                minimum = 0.75
            }
        }

    }
}

sonarLint {
    ignoreFailures = false
    rules {
        disable("java:S1075")
    }
}

tasks.named('check') {
    dependsOn 'sonarlintMain'
    dependsOn 'jacocoTestCoverageVerification'
}

gitHooks {
    hooks = ['pre-commit': 'check']
}